# revo-draw

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  EVIDENCE_LEDGER.md  EXCALIDRAW_PARITY_AUDIT.md  EXCALIDRAW_PORT_LEDGER.md  EXCALIDRAW_TOOLS_SPEC.md  FEATURE_PARITY_AUDIT.md  FORENSIC_REPORT.md  KNOWN_GAPS.md  NEEDS_HUMAN_TESTING.md  PARITY_E2E_AUDIT.md  PARITY_E2E_FINDINGS.json  PARITY_REMAINING_WORK.md  PHASE_F_PLAN.md  README.md  RESEARCH-excalidraw-miro.md  VERIFICATION_REPORT.md  discovery.md  drizzle.config.ts  enhance.md  geometry.md  layout-tool-claude-code-prompt.md  mandate.md  package.json  parity-report.md  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md  svelte.config.js  tsconfig.json  vite.config.ts  vitest-svelte.config.ts  vitest.aliases.ts  vitest.config.ts  vitest.setup.ts
audit-parts/: app-shell-layout.md  canvas-wiring.md  color-picker.md  design-tokens.md  dialogs-a11y.md  footer-zoom.md  keyboard-shortcuts.md  library.md  main-menu.md  stats-statusbar.md  style-panel.md  toolbar.md
discovery-parts/: _manifest.json  _order.txt  common__(root).md  common__src__0.md  common__src__1.md  common__src__2.md  element__(root).md  element__src__0.md  element__src__1.md  element__src__2.md  element__src__3.md  element__src__4.md  element__src__5.md  element__src__6.md  excalidraw-app__(root)__0.md  excalidraw-app__(root)__1.md  excalidraw-app__app-language.md  excalidraw-app__collab.md  (+69 more)
scripts/: e2e.mjs  (+119 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+125 files in other folders)
